# greenprompt

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  constants.py  core.py  greenprompt_usage.db  promptBestPractices.md  pyproject.toml  sysUsage.py  web.py
.claude/agents/: api-debugger.md  energy-analyst.md  power-engineer.md  prompt-coach.md
.claude/commands/: gp-analyze.md  gp-api.md  gp-db.md  gp-power.md  gp-release.md  gp-score.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yaml  tests.yml
docs/: api-reference.md  architecture.md  configuration.md  platform-support.md  prompt-scoring.md
experiments/: Experiment.py
greenprompt/: __init__.py  analytics.py  api.py  cli.py  constants.py  core.py  dbconn.py  proxy.py  samplerLinux.py  samplerMac.py  scoreBasic.py  setup.py  sysUsage.py
greenprompt/ollama-ui/: index.html  package-lock.json  package.json  vite.config.js
greenprompt/ollama-ui/src/: App.jsx  index.css  main.jsx
greenprompt/ollama-ui/src/components/: Analytics.jsx  Dashboard.jsx  EnergyChart.jsx  EnergyChartContainer.jsx  Overview.jsx  PromptTable.jsx
greenprompt/templates/: dashboard.html  index.html
ollama-ui/: package-lock.json  package.json
tests/: conftest.py  test_linux_stress.py
tests/common/: helpers.py
tests/linux/: test_linux_stress.py
tests/macos/: test_macos_power.py
tests/windows/: test_windows_power.py
