[project]
name = "greenprompt"
version = "0.1.0"
description = "A green prompt tool to estimate energy usage of LLM prompts"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "openai>=1.77.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "psutil>=7.0.0,<8.0.0",
    "flask>=3.1.0,<4.0.0",
    "py-cpuinfo>=9.0.0,<10.0.0",
    "flask-cors>=6.0.0,<7.0.0",
    "tiktoken>=0.9.0,<0.10.0",
]

[project.scripts]
greenprompt = "greenprompt.cli:main"
gprompt = "greenprompt.cli:main"
greenp = "greenprompt.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
