[tool.poetry]
name = "greenprompt"
version = "1.2"
description = "A green prompt tool to estimate energy usage of LLM prompts"
readme = "README.md"
authors = ["Uday <udapra@gmail.com>"]
license = "MIT"
homepage = "https://github.com/uday1201/greenprompt"
repository = "https://github.com/uday1201/greenprompt"
keywords = ["llm","energy","monitoring","ollama","cli"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = ">=1.77.0,<2.0.0"
requests = ">=2.32.3,<3.0.0"
psutil = ">=7.0.0,<8.0.0"
Flask = ">=3.1.0,<4.0.0"
py-cpuinfo = ">=9.0.0,<10.0.0"
flask-cors = ">=6.0.0,<7.0.0"
tiktoken = ">=0.9.0,<0.10.0"
twine = "^6.1.0"

[tool.poetry.scripts]
greenprompt = "greenprompt.cli:main"
gprompt = "greenprompt.cli:main"
greenp = "greenprompt.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
